--- a/PRACTICA_INTEGRADOR_FUERZAS_ARMADAS/.classpath
+++ b/PRACTICA_INTEGRADOR_FUERZAS_ARMADAS/.classpath
@@ -2,11 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="var" path="ALE_JARS">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -18,6 +13,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Lombok_library">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Slowik/eclipse/java-2022-09/eclipse/jars_externos/lombok.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
