--- a/PRACTICA_INTEGRADOR_FUERZAS_ARMADAS/.classpath
+++ b/PRACTICA_INTEGRADOR_FUERZAS_ARMADAS/.classpath
@@ -17,7 +17,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Slowik/eclipse/java-2022-09/eclipse/jars_externos/lombok.jar">
+	<classpathentry kind="lib" path="C:/Users/ale_e/eclipse/java-2022-06/eclipse/jars_externos/lombok-1.18.24.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
