--- a/EXPOSICION_SERIALIZACION_DESEREALIZACION/.classpath
+++ b/EXPOSICION_SERIALIZACION_DESEREALIZACION/.classpath
@@ -2,13 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/ale_e/eclipse/java-2022-06/eclipse/jars_externos/gson-2.10.jar"/>
 	<classpathentry kind="lib" path="C:/Users/ale_e/eclipse/java-2022-06/eclipse/jars_externos/lombok-1.18.24.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
